Cau hinh webpack v1.0.1

--- a/development/scss/app.scss
+++ b/development/scss/app.scss
@@ -1,5 +1,5 @@
 // 1. Your custom variables and variable overwrites
-$global-link-color: #0602da;
+$global-link-color: #c4961a;
 
 // 2. Import default variables and available mixins
 @import "~uikit/src/scss/variables-theme.scss";
